added tests for handlers, custom StrategyException